# agent-skills

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  ORCA.md  README.md  ROADMAP.md  SECURITY.md  _run_tests.py  _runner.py  docker-compose.yml  fix_bindings.py  input.json  input_synthesize_example.json  input_synthesize_paragraph.json  mkdocs.yml  pyproject.toml  rename_capabilities.py  requirements-lock.txt  setup.cfg  test_adversarial_safety.py  test_atomic_properties.py  test_binding_contracts.py  test_capabilities_batch.py  test_e2e_all_phases.py  test_fuzz_expressions.py  test_local_capabilities.py  test_mcp_server.py  test_model_baselines.py  test_new_skills.py  test_performance_baselines.py  test_phase_a_features.py  (+4 more)
.agent-skills/: active_bindings.json
.github/: FUNDING.yml
CLI/: main.py
cli/: main.py
customer_facing/: README.md  __init__.py  fastapi_server.py  http_openapi_server.py  mcp_tool_bridge.py  neutral_api.py
customization/: binding_activation.py  binding_state_store.py  override_intent_loader.py  quality_gate.py  service_descriptor_loader.py
docs/: ADAPTER_AUTH_POLICY.md  ADR.md  AGENT_GATEWAY_ADR.md  AGENT_TRACE_DRY_RUN_GUIDE.md  API_VERSIONING_CHANGELOG.md  ASYNC_EXECUTION.md  AUTH.md  BINDING_GUIDE.md  BINDING_SELECTION.md  CI_AND_TESTING.md  COALA_MAPPING.md  COGNITIVE_STATE_V1.md  CONSUMER_FACING_NEUTRAL_API.md  CROSS_REPO_ARCHITECTURE.md  CROSS_REPO_PIN_POLICY.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  ERROR_TAXONOMY.md  GATEWAY_RELEASE_GO_NO_GO.md  GOVERNANCE_TRANSITION.md  INSTALLATION.md  JSON_SCHEMAS.md  MCP_INTEGRATION_SLICES.md  OBSERVABILITY.md  ONBOARDING_10_MIN.md  OPENAPI_CONSTRUCTION_GUIDE.md  OPENAPI_CONSTRUCTION_PACKAGES.md  OPENAPI_ERROR_SECURITY_BASELINE.md  OPENAPI_PACKAGE6_CLOSURE.md  OPENAPI_PHASE0_FOUNDATION.md  OPENAPI_PHASE1_SMOKE_PLAN.md  OPENAPI_POPULATION_CHECKLIST.md  PAPER.md  PENDING_BACKENDS.md  PLUGINS.md  POSITIONING.md  PRE_MCP_OPENAPI_READINESS.md  PRIMARY_USER_PERSONAS.md  PROJECT_STATUS.md  RELIABILITY.md  (+14 more)
examples/: README.md  anthropic_tools_example.py  claude_agent_example.py  client_usage.py  embedded_execution.py  gemini_tools_example.py  input_safe_summarize.json  multi_step_pipeline.yaml  openai_tools_example.py  router_skill.yaml  scatter_gather.yaml  simple_text_skill.yaml
experiments/: generate_outputs.py  run_benchmark.py
gateway/: __init__.py  attach_targets.py  core.py  discovery.py  evidence.py  models.py
official_mcp_servers/: __init__.py  __main__.py  data_tools.py  server.py  text_tools.py  web_tools.py
official_services/: README.md  __init__.py  agent_baseline.py  analysis_baseline.py  audio_baseline.py  code_baseline.py  core_python.py  data_baseline.py  decision_baseline.py  doc_baseline.py  email_baseline.py  eval_baseline.py  fs_baseline.py  identity_baseline.py  image_baseline.py  integration_baseline.py  memory_baseline.py  message_baseline.py  model_baseline.py  ops_baseline.py  policy_baseline.py  provenance_baseline.py  scaffold_service.py  security_baseline.py  table_baseline.py  task_baseline.py  text_baseline.py  video_baseline.py  web_baseline.py
policies/: official_default_selection.yaml
proto/: agent_skills.proto
runtime/: active_binding_map.py  audit.py  auth.py  binding_executor.py  binding_models.py  binding_registry.py  binding_resolver.py  capability_executor.py  capability_loader.py  checkpoint.py  circuit_breaker.py  composite_capability_loader.py  composite_skill_loader.py  default_mcp_client_registry.py  engine_factory.py  errors.py  execution_engine.py  execution_planner.py  execution_state.py  input_mapper.py  mcp_invoker.py  mcp_subprocess_client.py  metrics.py  models.py  nested_skill_runner.py  observability.py  openapi_error_contract.py  openapi_invoker.py  openrpc_invoker.py  otel_auto.py  otel_integration.py  output_mapper.py  plugin_protocols.py  plugins.py  policy_engine.py  protocol_router.py  pythoncall_invoker.py  reference_resolver.py  registry_federation.py  request_builder.py  (+25 more)
sdk/: PUBLISHING.md  README.md  __init__.py  autogen_adapter.py  crewai_adapter.py  embedded.py  generate_go.sh  generate_ts.sh  langchain_adapter.py  semantic_kernel_adapter.py  test_llm_adapters.py  test_schema_helpers.py  test_sdk_adapters.py
test_inputs/: analysis_compare.json  analysis_decompose.json  analysis_risk_assess.json  briefing_ai_regulation.json  briefing_fitness_spain.json  decision_make.json  eval_validate.json  research_generate_briefing.json  task_frame.json  test_classify.json  test_embed.json  test_entity_extract.json  test_extract.json  test_keyword_extract.json  test_lang_detect.json  test_merge.json  test_summarize.json  test_template.json  test_translate.json
test_results/: analysis_compare.json  analysis_decompose.json  analysis_risk-assess.json  decision_make.json  eval_validate.json  openai_compare_trace.txt  openai_decision_fix2_trace.txt  openai_decision_fix_trace.txt  openai_decision_trace.txt  openai_decompose_trace.txt  openai_eval_trace.txt  openai_frame_trace.txt  openai_risk_trace.txt  run_skill_sweep.py  smoke_http_api.py  task_frame.json
tooling/: batch_scaffold.py  benchmark_paper.py  build_attach_target_index.py  build_skill_quality_catalog.py  compose_dsl.py  compute_runtime_coverage.py  compute_runtime_stats.py  compute_skill_executability.py  demo_mcp_dual_job_trace.py  generate_error_catalog.py  generate_json_schemas.py  generate_marketplace_site.py  generate_mcp_bindings.py  generate_openapi_spec.py  ingest_skill_usage_from_logs.py  loadtest.js  officialization_package.py  promotion_package.py  run_customer_http_api.py  run_customer_mcp_bridge.py  run_model_research_mock.py  security_audit.py  skill_authoring.py  smoke_capabilities.json  smoke_gateway_slice3.py  test_capability_contracts.py  validate_json_schemas.py  validate_skill_schema.py  validate_skills_deep.py  verify_binding_conformance_layer.py  verify_binding_conformance_suite.py  verify_binding_fallback_policy.py  (+14 more)
(+380 files in other folders)
